tests/sources/invalid/match/match_duplicate_field_binding.fire
// Invalid: the same payload field is bound more than once in one pattern.
// EXPECT: semantic error

enum Shape {
    Rectangle(float64 width, float64 height),
    Point
}

Shape s = Shape.Point;
match s {
    Shape.Rectangle(width, width: w2) -> { }
    Shape.Point -> { }
}
